# tummycrypt

./: .env.example  .envrc  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .lychee.toml  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  Cargo.toml  Containerfile  Containerfile.mcp  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  RESEARCH.md  Taskfile.yaml  deny.toml  docker-compose.yml  filers.yml  flake.nix  masters.yml  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  nix-ci.yml  release.yml
Formula/: tcfs.rb
certs/: SeaweedFS_CA.crl  SeaweedFS_CA.crt  SeaweedFS_CA.key  client01.crt  client01.csr  client01.key  filer01.crt  filer01.csr  filer01.key  master01.crt  master01.csr  master01.key  volume01.crt  volume01.csr  volume01.key
config/: filer.toml  prometheus.yml  s3.json  tcfs.example.toml
config/systemd/: tcfsd.service
crates/tcfs-chunks/: Cargo.toml
crates/tcfs-chunks/benches/: chunks.rs
crates/tcfs-chunks/src/: blake3.rs  delta.rs  fastcdc.rs  lib.rs  seekable_zstd.rs
crates/tcfs-cli/: Cargo.toml
crates/tcfs-cli/src/: main.rs
crates/tcfs-cloudfilter/: Cargo.toml
crates/tcfs-cloudfilter/src/: hydration.rs  lib.rs  placeholder.rs  provider.rs
crates/tcfs-core/: Cargo.toml  build.rs
crates/tcfs-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/tcfs-core/src/proto/: tcfs.proto
crates/tcfs-crypto/: Cargo.toml
crates/tcfs-crypto/benches/: crypto.rs
crates/tcfs-crypto/src/: chunk.rs  kdf.rs  keys.rs  lib.rs  manifest.rs  names.rs  recovery.rs
crates/tcfs-file-provider/: Cargo.toml  build.rs  cbindgen.toml
crates/tcfs-file-provider/src/: lib.rs
crates/tcfs-file-provider/uniffi/: tcfs_file_provider.udl
crates/tcfs-fuse/: Cargo.toml
crates/tcfs-fuse/src/: cache.rs  driver.rs  erofs.rs  hydrate.rs  lib.rs  negative_cache.rs  stub.rs
crates/tcfs-mcp/: Cargo.toml
crates/tcfs-mcp/src/: main.rs  server.rs
crates/tcfs-secrets/: Cargo.toml
crates/tcfs-secrets/src/: age.rs  device.rs  identity.rs  kdbx.rs  keychain.rs  lib.rs  rotate.rs  sops.rs
crates/tcfs-sops/: Cargo.toml
crates/tcfs-sops/src/: config.rs  diff.rs  lib.rs  merge.rs
crates/tcfs-storage/: Cargo.toml
crates/tcfs-storage/src/: health.rs  lib.rs  multipart.rs  operator.rs  seaweedfs.rs
crates/tcfs-sync/: Cargo.toml
crates/tcfs-sync/src/: conflict.rs  engine.rs  git_safety.rs  lib.rs  manifest.rs  nats.rs  scheduler.rs  state.rs  watcher.rs
crates/tcfs-sync/tests/: auto_pull_logic_test.rs  encrypted_roundtrip_test.rs  multi_machine_sim.rs  push_pull_roundtrip.rs  resolve_conflict_test.rs  rocksdb_state_test.rs
crates/tcfs-tui/: Cargo.toml
crates/tcfs-tui/src/: app.rs  daemon.rs  main.rs  ui.rs
crates/tcfs-tui/src/ui/widgets/: config.rs  conflicts.rs  dashboard.rs  mod.rs  mounts.rs  secrets.rs
crates/tcfsd/: Cargo.toml  tcfsd.service
crates/tcfsd/src/: cred_store.rs  daemon.rs  grpc.rs  main.rs  metrics.rs  worker.rs
credentials/: github.yaml  npmjs.yaml  porkbun.yaml  seaweedfs-admin.yaml
credentials/seaweedfs-users/: friends.yaml  jess.yaml  kate.yaml  public.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  PROTOCOL.md  SECURITY.md  _config.yml  index.md
docs/archive/: AGENTS.md  CRUSH.md  DEVELOPMENT.md  README.md  RETOOL.md
docs/filters/: mermaid.lua
docs/ops/: fleet-deployment.md
docs/rfc/: 0001-fleet-sync-integration.md  0002-darwin-fuse-strategy.md  0003-ios-file-provider.md
docs/templates/: tcfs.latex
docs/tex/: architecture.tex  fileprovider.tex  preamble.tex  protocol.tex  security.tex
examples/lab-fleet/: README.md  petting-zoo-mini.nix  xoxd-bates.nix  yoga.nix
infra/ansible/inventory/: main.yml
infra/ansible/playbooks/: deploy.yml  volumes.yml
infra/ansible/roles/seaweedfs-filer/defaults/: main.yml
infra/ansible/roles/seaweedfs-filer/templates/: config.json.j2  filer.toml.j2  sw-filer.service.j2
infra/ansible/roles/seaweedfs-masters/templates/: sw-master.service.j2
infra/ansible/roles/seaweedfs-volume-drobo/defaults/: main.yml
infra/ansible/roles/seaweedfs-volume-drobo/tasks/: main.yml
infra/ansible/roles/ubuntu-client/tasks/: main.yml
infra/ansible/roles/ubuntu-client/templates/: rclone.conf.j2
infra/k8s/charts/tcfs-backend/: Chart.yaml  README.md  values.yaml
infra/k8s/charts/tcfs-backend/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pdb.yaml  rbac.yaml  scaledobject.yaml  service.yaml
infra/k8s/charts/tcfs-stack/: Chart.yaml  values-dev.yaml  values.yaml
infra/k8s/charts/tcfs-stack/templates/: NOTES.txt  namespace.yaml  seaweedfs-secret.yaml
infra/tofu/: backend.tf  versions.tf
infra/tofu/environments/civo/: main.tf  terraform.tfvars.enc.yaml  variables.tf
infra/tofu/environments/local/: main.tf  variables.tf
infra/tofu/modules/keda/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/nats/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/observability/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/porkbun-dns/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/seaweedfs/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/tailscale-nats/: main.tf  outputs.tf  variables.tf
infra/tofu/modules/tcfs-backend/: main.tf  outputs.tf  variables.tf
nix/modules/: tcfs-daemon.nix  tcfs-user.nix
rocky-qcow/: appu-ed.yaml  rocky-qcow.cloudconfig
roles/seaweedfs-filer/tasks/: main.yml
roles/seaweedfs-filer/templates/: filer.toml.j2
roles/seaweedfs-masters/defaults/: main.yml
roles/seaweedfs-masters/tasks/: main.yml
roles/seaweedfs-masters/templates/: security.toml.j2
roles/seaweedfs-volume-drobo/templates/: sw-volume.service.j2
roles/ubuntu-client/defaults/: main.yml
roles/ubuntu-client/templates/: TummyMount.service  rclone.conf.j2
scripts/: cross-compile.sh  generate-certs.sh  migrate-credentials.sh  setup-dev.sh  setup_venv.sh  sops-init.sh  tcfs-deploy.sh
