[package]
name = "tcfs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs shared types, config schema, error types, and proto definitions"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
# tonic 0.14: codegen via tonic-prost-build (replaces tonic-build + prost-build)
tonic-prost-build = { workspace = true }
# Vendored protoc binary — no system protoc required
protoc-bin-vendored = "3"
