[package]
name = "tcfs-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs client-side E2E encryption: XChaCha20-Poly1305, Argon2id KDF, key hierarchy"

[dependencies]
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
aes-siv = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bip39 = { workspace = true }
blake3 = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
divan = { workspace = true }

[[bench]]
name = "crypto"
harness = false
