[package]
name = "tcfs-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs MCP (Model Context Protocol) server for AI agent integration"

[[bin]]
name = "tcfs-mcp"
path = "src/main.rs"

[dependencies]
tcfs-core = { path = "../tcfs-core" }
rmcp = { workspace = true }
schemars = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
