[package]
name = "tcfs-secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs SOPS/age/KDBX credential integration"

[dependencies]
tcfs-core = { path = "../tcfs-core" }
age = { workspace = true }
keepass = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rpassword = { workspace = true }
keyring = { workspace = true }
hostname = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
