[package]
name = "tcfs-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "tcfs terminal user interface"

[[bin]]
name = "tcfs-tui"
path = "src/main.rs"

[dependencies]
tcfs-core = { path = "../tcfs-core" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
